fix reverse-merge; fix Meld running with file/path name with space; fix table sorting and which row is selected issues